--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seatown Strings</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Seatown Strings</h1>
+   <div class="header">
+   <div class="header-logo">Header Logo</div>
+   <div class="header-links"> 
+    <a href="www.instagram.com/seatownstrings">Instagram</a>
+    <a href="www.laxsteals.com">Lax Deals</a>
+    <a href="www.pll.com">PLL Website</a>
+   </div>
+     </div>
+   <div class="body1">This website is awesome</div>
+   <div class="body2">Random info</div>
+   <div class="body3">Quote</div>
+   <div class="body4">Sign up now!</div>
+   <div class="footer">copyright</div>
 </body>
 </html>
