added base info and styles to body 1 and 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
    </div>
      </div>
    <div class="body1">This website is awesome</div>
-   <div class="body2">Random info</div>
+   <div>
+
+   </div>
+   <div class="body2">Random Information
+   <div>
+    <h3>Some Random Information</h3>
+   </div>
+   <div>
+    <p>idk what to put here yet</p>
+   </div>
+   </div>
+
    <div class="body3">Quote</div>
    <div class="body4">Sign up now!</div>
    <div class="footer">copyright</div>
