added styles and basic format for body sections

--- a/index.html
+++ b/index.html
@@ -9,28 +9,36 @@
 </head>
 <body>
    <div class="header">
-   <div class="header-logo">Header Logo</div>
-   <div class="header-links"> 
-    <a href="www.instagram.com/seatownstrings">Instagram</a>
-    <a href="www.laxsteals.com">Lax Deals</a>
-    <a href="www.pll.com">PLL Website</a>
-   </div>
+        <div class="header-logo">Header Logo</div>
+        <div class="header-links"> 
+            <a href="www.instagram.com/seatownstrings">Instagram</a>
+            <a href="www.laxsteals.com">Lax Deals</a>
+            <a href="www.pll.com">PLL Website</a>
+        </div>
      </div>
    <div class="body1">This website is awesome</div>
-   <div>
-
-   </div>
+        <p>Random information paragragh</p>
+        <button id="button1">Sign Up!</button>
+   <div></div>
    <div class="body2">Random Information
-   <div>
-    <h3>Some Random Information</h3>
+     <div>
+        <h3 id="b2header">Some Random Information</h3>
    </div>
    <div>
-    <p>idk what to put here yet</p>
+     <p>idk what to put here yet</p>
    </div>
    </div>
 
    <div class="body3">Quote</div>
-   <div class="body4">Sign up now!</div>
+   <div class="body4">
+    <div id="CallToAction">
+        <h3>Call to action! It's time!</h3>
+        <p>Sign up for our products by clicking that button</p>
+        <button id="b4button">Sign Up!</button>
+
+    </div>
+
+   </div>
    <div class="footer">copyright</div>
 </body>
 </html>
