added more structre and styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
    <div class="body3">Quote</div>
    <div class="body4">
     <div id="CallToAction">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our products by clicking that button</p>
+        <div id="c2a-2">
+            <h3>Sign up now for great updates and deals!</h3>
+            <p>Sign up for our newsletter</p>
+        </div>
         <button id="b4button">Sign Up!</button>
 
     </div>
