added more styles for quote random information section

--- a/index.html
+++ b/index.html
@@ -13,23 +13,30 @@
         <div class="header-links"> 
             <a href="www.instagram.com/seatownstrings">Instagram</a>
             <a href="www.laxsteals.com">Lax Deals</a>
-            <a href="www.pll.com">PLL Website</a>
+            <a href="www.premierlacrosseleague.com">PLL Website</a>
         </div>
      </div>
-   <div class="body1">This website is awesome</div>
+   <div class="body1">
         <p>Random information paragragh</p>
         <button id="button1">Sign Up!</button>
-   <div></div>
-   <div class="body2">Random Information
+   </div>
+   <div class="body2">
      <div>
         <h3 id="b2header">Some Random Information</h3>
+     </div>
+     <div>
+        <ul id="b2l">
+            <li>Instagram</li>
+            <li>Youtube</li>
+            <li>Website</li>
+            <li>Contact</li>
+        </ul>
+     </div>
    </div>
-   <div>
-     <p>idk what to put here yet</p>
+   <div class="body3">
+    <p id="quote">“If you know the enemy and know yourself, you need not fear the result of a hundred battles. If you know yourself but not the enemy, for every victory gained you will also suffer a defeat. If you know neither the enemy nor yourself, you will succumb in every battle.”</p>
+    <p id="author-book">― Sun Tzu, The Art of War</p>
    </div>
-   </div>
-
-   <div class="body3">Quote</div>
    <div class="body4">
     <div id="CallToAction">
         <div id="c2a-2">
@@ -37,10 +44,9 @@
             <p>Sign up for our newsletter</p>
         </div>
         <button id="b4button">Sign Up!</button>
-
     </div>
 
    </div>
-   <div class="footer">copyright</div>
+   <div class="footer">Copyright © SeatownStrings 2018</div>
 </body>
 </html>
