added logo images and captions to landing-page

--- a/index.html
+++ b/index.html
@@ -9,27 +9,42 @@
 </head>
 <body>
    <div class="header">
-        <div class="header-logo">Header Logo</div>
+        <div class="header-logo">
+            <img id="seatown-logo" src="./landing-page-images/Seatown.png">
+        </div>
         <div class="header-links"> 
-            <a href="www.instagram.com/seatownstrings">Instagram</a>
-            <a href="www.laxsteals.com">Lax Deals</a>
-            <a href="www.premierlacrosseleague.com">PLL Website</a>
+            <a href="https://www.instagram.com/seatown_strings/">Instagram</a>
+            <a href="https://laxsteals.com/">Lax Deals</a>
+            <a href="https://premierlacrosseleague.com/">PLL Website</a>
         </div>
      </div>
    <div class="body1">
-        <p>Random information paragragh</p>
+        <h2>About us</h2>
+        <p>Seatown Strings is a lacrosse company based out of the greater Seattle area.</p>
         <button id="button1">Sign Up!</button>
    </div>
    <div class="body2">
      <div>
-        <h3 id="b2header">Some Random Information</h3>
+        <h3 id="b2header">Keep up with your stringers!</h3>
      </div>
-     <div>
-        <ul id="b2l">
-            <li>Instagram</li>
-            <li>Youtube</li>
-            <li>Website</li>
-            <li>Contact</li>
+     <div id="b2l">
+        <ul>
+            <li>
+                <img src="./landing-page-images/DSC_7176.JPG">
+                <p>Warmup prior to CUI scrimmage</p>
+            </li>
+            <li>
+                <img src="./landing-page-images/DSC_8122.JPG">
+                <p>Mid-game dodging from X</p>
+            </li>
+            <li>
+                <img src="./landing-page-images/DSC_8396.JPG">
+                <p>Team celebrating a goal by @archie</p>
+            </li>
+            <li>
+                <img src="./landing-page-images/DSC_7273.JPG">
+                <p>Team huddle</p>
+            </li>
         </ul>
      </div>
    </div>
