worked on body 1 section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
         </div>
      </div>
    <div class="body1">
-        <h2>About us</h2>
-        <p>Seatown Strings is a lacrosse company based out of the greater Seattle area.</p>
-        <button id="button1">Sign Up!</button>
+        <div>
+            <h2>About us</h2>
+            <p>Seatown Strings is a lacrosse company based out of the greater Seattle area.</p>
+            <button id="button1">Sign Up!</button>
+        </div>
+        <div>
+            <img src="./landing-page-images/DSC_7291.JPG">
+        </div>
    </div>
    <div class="body2">
      <div>
